Fixed text align in table cells

--- a/app2drive.css
+++ b/app2drive.css
@@ -7,6 +7,7 @@ input{
 }
 span, td, th{
   font-size: 10px;
+  text-align: center;
 }
 button{
   margin-left: 10px;
